fix spacing issues and other tweaks for mobile view

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -1,6 +1,11 @@
 .carousel-image {
-    max-height: 70vh;
+    height: 65vh;
+    @media (max-width: 720px) {
+        height: 35vh;
+    }
     object-fit: cover;
+    width: 100%;
+
 }
 
 .carousel-caption {
